# risefl

./: CMakeLists.txt  README.md  base64.cpp  bulletin.cpp  di_zkp_interface_client.cpp  di_zkp_interface_common.cpp  di_zkp_interface_server.cpp  exception.cpp  main.cpp  make.sh  mpz_conversion.cpp  risefl_interface_client.cpp  risefl_interface_common.cpp  risefl_interface_server.cpp  rist_fast_computation.cpp  ristretto.cpp  ristretto_vector.cpp  shamir.cpp  utils.cpp  zkp.cpp
bench/: bench_batch_add.cpp  bench_inner_prod_mod_p.cpp  bench_no_mal.cpp  bench_precomp.cpp  bench_random.cpp  simulate.cpp  simulate.h
doc/: bulletin.md  client.md  precomp.md  server.md
docker/: README.md  risefl.Dockerfile
include/: base64.h  bulletin.h  di_zkp_interface_client.h  di_zkp_interface_common.h  di_zkp_interface_server.h  exception.h  mpz_conversion.h  risefl_interface_client.h  risefl_interface_common.h  risefl_interface_server.h  rist_fast_computation.h  ristretto.h  ristretto_vector.h  shamir.h  utils.h  zkp.h  zkp_hash.h
include/random_avx/: LICENSE-apache2  LICENSE-modified-bsd  README.md  mersenne-twister-avx2.cpp  mersenne-twister-avx2.h
include/sodium/: ed25519_ref10.c  ed25519_ref10.h  ed25519_ref10_fe_25_5.h  ed25519_ref10_fe_51.h  utils.h
include/sodium/private/: common.h
include/ttmath/: CHANGELOG
include/ttmath/doc/doxygen/html/: annotated.html  classes.html  classttmath_1_1_big.html  classttmath_1_1_big__coll__graph.dot  classttmath_1_1_big__coll__graph.md5  classttmath_1_1_exception_info.html  classttmath_1_1_exception_info__inherit__graph.dot  classttmath_1_1_exception_info__inherit__graph.md5  classttmath_1_1_history.html  classttmath_1_1_int.html  classttmath_1_1_int__coll__graph.dot  classttmath_1_1_int__coll__graph.md5  classttmath_1_1_int__inherit__graph.dot  classttmath_1_1_int__inherit__graph.md5  classttmath_1_1_misc.html  classttmath_1_1_objects.html  classttmath_1_1_parser.html  classttmath_1_1_parser_1_1_mat_operator.html  classttmath_1_1_parser__coll__graph.dot  classttmath_1_1_parser__coll__graph.md5  classttmath_1_1_reference_error.html  classttmath_1_1_reference_error__coll__graph.dot  classttmath_1_1_reference_error__coll__graph.md5  (+188 more)
include/ttmath/samples/: Makefile
python/: bulletin.i  di_zkp_interface.i  di_zkp_interface.py  di_zkp_interface_client.i  di_zkp_interface_common.i  di_zkp_interface_server.i  risefl_interface.i  risefl_interface.py  risefl_interface_client.i  risefl_interface_common.i  risefl_interface_server.i  test.py  test_non_priv_cosine.py  test_non_priv_l2.py  test_non_priv_sphere.py
test/: test.cpp  test_bulletin.cpp  test_fast.cpp  test_interface.cpp  test_interface_abstract.cpp  test_interface_common.cpp  test_mpz.cpp  test_precomp.cpp  test_ristretto.cpp  test_ristretto_with_zz_p.cpp  test_shamir.cpp  test_zkp.cpp  test_zkp_batch.cpp  test_zkp_hash.cpp  test_zz_p.cpp
